<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CopCast</string>
    <string name="login_title">LOGIN</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="unauthorized_login">Invalid credentials</string>
    <string name="network">Network</string>
    <string name="server_url">Server URL</string>
    <string name="settings">Settings</string>
    <string name="login_required">Login required</string>
    <string name="password_required">Password required</string>
    <string name="network_required">Network required</string>
    <string name="copcast_main_title">CopCast</string>
    <string name="start_mission">Start Mission</string>
    <string name="recording_started">Started Registering&#8230;</string>
    <string name="notification_record_title">CopCast Camera</string>
    <string name="notification_record_description">Recording on SDCard</string>
    <string name="notification_location_title">Searching Location</string>
    <string name="notification_location_description">Searching for your current location</string>
    <string name="please_hold">Please hold&#8230;</string>
    <string name="login_in">Logging in</string>
    <string name="server_error">Unable to contact server</string>
    <string name="connection_error">Error contacting server. Please, verify your connection.</string>
    <string name="bad_request_error">Connection error. Please, contact administrator.</string>
    <string name="welcome">Welcome.</string>
    <string name="welcome_desc">Tap below to start recording and location capture.</string>
    <string name="pause_recording">Pause Recording</string>
    <string name="end_mission">End Mission</string>
    <string name="upload_data">Upload data</string>
    <string name="upload_data_size">Upload data (%1$sMB)</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="mission_start">Mission Started.</string>
    <string name="mission_start_desc">Recording and location capture are ON.</string>
    <string name="live_stream">Live streaming</string>
    <string name="live_stream_desc">Stream data live to HQ</string>
    <string name="uploading">Uploading</string>
    <string name="uploading_size">Uploading (%1$sMB of %2$sMB)</string>
    <string name="upload_disabled">Battery low. Connect your phone to a power source to upload.</string>
    <string name="upload_stopped">Upload canceled due to network/charging restrictions</string>
    <string name="upload_completed">Upload completed!</string>
    <string name="stop_uploading">You are uploading data. Want to stop it and start the mission?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notification_stream_title">Livestreaming</string>
    <string name="notification_stream_description">Livestreaming videos to the server</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="resume_mission">Resume Mission</string>
    <string name="pause_title">Paused.</string>
    <string name="pause_desc">Recording has been paused.</string>
    <string name="wifi_dialog_title">Wi-Fi is disabled</string>
    <string name="wifi_dialog_msg">For better location accuracy please turn Wi-Fi on. Do you want to change settings?</string>
    <string name="cancel_button">Cancel</string>
    <string name="settings_button">Settings</string>
    <string name="confirmation_tittle">Confirmation</string>
    <string name="confirmation_msg">Do you really want to leave Copcast?</string>
    <string name="confirmation_button_positive">Yes</string>
    <string name="confirmation_button_negative">No</string>
    <string name="pref_upload_wifi_only">Use wi-fi only</string>
    <string name="pref_upload_wifi_only_desc">Disables mobile data when uploading video.</string>
    <string name="pref_server_url">Server URL</string>
    <string name="serverurl_disabled_logged">It is not possible to change the server url while logged.</string>
    <string name="title_activity_upload_video">UploadVideoActivity</string>
    <string name="title_activity_incident_report">Incident Report</string>
    <string name="action_incident_form">Incident Form</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_playback">Video playback</string>
    <string name="no_video_message">No video available for playback</string>
    <string name="gps_config">GPS Config</string>
    <string name="alert_message">The location could not be retrieved. Check your device\'s configurations.</string>
    <string name="send">Send</string>
    <string name="lethal_force">Use of lethal force?</string>
    <string name="argument">Argument?</string>
    <string name="resistance">Resistance?</string>
    <string name="arrest">Arrest?</string>
    <string name="type_fine">Type of citation?</string>
    <string name="fine">Citation?</string>
    <string name="number_injured">Number of injured</string>
    <string name="gravity">Severity</string>
    <string name="accident">Accident?</string>
    <string name="address">Address</string>
    <string name="location">GPS coordinates</string>
    <string name="date_time">Date / Time</string>
    <string name="use_force">Use of force?</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fill_address">Please, fill the address</string>
    <string name="fill_fine_type">Please, fill the Fine type</string>
    <string name="fill_number_injured">Please, fill Number of Injured</string>
    <string name="address_not_detected">Could not detect address. Please enter it manually.</string>
    <string name="form_sent">Form sent</string>
    <string name="error_sending_form">Error sending form to server, please retry!</string>
    <string name="registered_incident">Incident Registered</string>
    <string name="token_expired">Your token expired. Please log in</string>
    <string name="invalid_token">Invalid token. Please log in.</string>
    <string name="network_state_not_charging"> Device must be charging</string>
    <string name="network_state_no_network">No network available</string>
    <string name="upload_denied">Upload denied</string>
    <string name="network_state_wifi_required">Wi-fi network required</string>
    <string name="upload_state_unknown">Unexpected upload state.</string>
    <string name="upload_error">Error during upload. Please try again.</string>
    <string name="upload_no_data">There is no data to be uploaded</string>
    <string name="warning">Warning</string>
    <string name="incompatible_version">Incompatible Android version</string>
    <string name="loading">Loading&#8230;</string>
    <string name="error_keystore">Error initializing cryptographic system.\nA SIM card is required.</string>
    <string name="server_url_hint">API server URL</string>
    <string name="do_registration">Register</string>
    <string name="device_registration">Device Registration</string>
    <string name="registering">Registering device</string>
    <string name="storing_video">Storing video file</string>
    <string name="forbidden_login">You do not have permission to use Copcast</string>
    <string name="not_supported">Talk - Feature not supported in your device</string>
    <string name="internal_error">Internal application error</string>
    <string name="incomplete_registration">Missing registration parameters. Please try restarting the application.</string>
    <string name="about">About</string>
    <string name="version_name">Version</string>
    <string name="power_unplugged_upload_aborted">Power disconnected. Aborting upload.</string>
    <string name="automatic_upload">Automatic upload</string>
    <string name="automatic_upload_desc">Enables automatic uploading while connected to power supply.</string>
    <string name="start_automatic_upload">Starting automatic upload</string>
    <string name="high_accuracy_location_dialog_msg">You must enable high accuracy location services to use Copcast</string>
    <string name="enable">Enable</string>
    <string name="notification_paused_description">Recording is paused</string>
    <string name="no_connection">You are not presently connected to the server. All data will be stored locally on your device.</string>
    <string name="device_orientation">Device orientation</string>
    <string name="device_orientation_description">Device orientation setting for recorded videos.</string>
    <string name="livestream_request">request</string>
    <string name="livestream_cancel">cancel</string>
    <string name="crash_subject">Copcast crashed!</string>
    <string name="report_crash">Report...</string>
    <string name="message_crash">Copcast has crashed</string>
    <string name="title_crash">Sorry...!</string>
    <string name="feedback">Send us your feedback</string>

</resources>
