<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AuthenticationActivity"
    style="@style/MainContent"
    android:textAlignment="center">


    <RelativeLayout
        android:id="@+id/login_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_title"
            android:id="@+id/loggedUserLabel"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            style="@style/MainContent"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLoginUser"
            android:hint="@string/login_hint"
            android:layout_below="@+id/loggedUserLabel"

            android:layout_marginTop="16dp"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textIsSelectable="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLoginPassword"
            android:hint="@string/password_hint"
            android:layout_below="@+id/txtLoginUser"

            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/btn_login_ok"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@android:string/ok"
            android:layout_alignParentBottom="false"
            style="@style/MainContent"
            android:layout_below="@+id/txtLoginPassword" />

    </RelativeLayout>

</RelativeLayout>
